[package]
name = "ebpf-hook-ifunc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = "0.21.2"
libc = "0.2"
structopt = "0.3"
ctrlc = "3.1"
object = "0.32.1"
plain = "0.2"
lazy_static = "1.4.0"
colored = "2.0.4"

[build-dependencies]
libbpf-cargo = "0.21.2"
